tests/baselines/reference/ES5SymbolProperty6.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(2,5): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(2,6): error TS2304: Cannot find name 'Symbol'.
tests/cases/conformance/Symbols/ES5SymbolProperty6.ts(5,9): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/Symbols/ES5SymbolProperty6.ts (3 errors) ====
    class C {
        [Symbol.iterator]() { }
        ~~~~~~~~~~~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.